--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>I am a cat</h1>
+    <h1>Welcome to my Profile</h1>
+    <div id="introduction">
+      <h2>Qing's Profile</h2>
+      <p> Hello, My name is Qing Zhang, I graduated from China with a major in education. I obtained two teaching credentials from China and America, currently I worked for a public secondary school in Utah, I love teaching kids!</p>
 
+
+
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
