--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <h1>Welcome to my Profile</h1>
     <div id="introduction">
       <h2>Qing's Profile</h2>
-      <p> Hello, My name is Qing Zhang, I graduated from China with a major in education. I obtained two teaching credentials from China and America, currently I worked for a public secondary school in Utah, I love teaching kids!</p>
-
+      <!-- tips:first & last name, relevant education,certificates, skills,previsou jobs-->
+      <p> Hello, My name is Qing Zhang, I graduated from China with a major in education.<br/> I obtained two teaching credentials from China and America, currently I worked for a public secondary school in Utah, I love teaching kids!</p>
+     <div/>
 
 
     
