--- a/index.html
+++ b/index.html
@@ -1,29 +1,83 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<!-- Bootstrap CSS -->
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+			integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+			crossorigin="anonymous"
+		/>
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Welcome to my Profile</h1>
-    <div id="introduction">
-      <h2>Qing's Profile</h2>
-      <!-- tips:first & last name, relevant education,certificates, skills,previsou jobs-->
-      <p> Hello, My name is Qing Zhang, I graduated from China with a major in education.<br/> I obtained two teaching credentials from China and America, currently I worked for a public secondary school in Utah, I love teaching kids!</p>
-     <div/>
+		<title>EDPS 6560 week2-3</title>
+	</head>
 
+	<body>
+		<!-- Welcome to EDPS 6560 week2-3- 
+            This is an example comment 
+        -->
+		<div id="sec_lan">
+			<h1><strong>Qing Zhang</strong></h1>
+			<h2>IDET student at the University of Utah</h2>
+			<h3>UI Design | UX Testing | Web Development | Machine Learning | eLearning</h3>
+			<h4>
+				Creating advanced instructional systems and technologies that leverage data analytics to tailor instruction to the specific needs of different learners
+			</h4>
+			<a href="#sec_abo">About Me</a>
+		</div>
+		<nav id="sec_nav">
+			<ul>
+				<li>About Me</li>
+				<li>Experience</li>
+				<li>Education</li>
+				<li>Skills</li>
+				<li><a href="projects/1.html">Portfolio</a></li>
+				<li>Awards</li>
+				<li><a href="contact.html" target="_blank">Contact Me</a></li>
+				<li><a class="btn btn-primary rounded-pill" href="contact.html" role="button" target="_blank">Contact Me</a></li>
+			</ul>
+		</nav>
+		<div id="sec_abo">
+			<!-- Start About Me Section -->
+			<h1>About Me</h1>
+			<img src="img/bio.png" alt="Cynthia’s headshot" height="300" width="auto" />
+			<p>
+				Currently, I am a DLI Chinese Teacher. I love teaching Chinese to my US students!
+			</p>
+		</div>
+		<!-- End About Me Section -->
+		<div id="sec_exp">
+			<!-- Start Experience Section -->
+			<h1>Experience</h1>
+			<h2>Skills</h2>
+			<h3>IDET program, <br /><span>University of Utah</span></h3>
+			<p>August 2024 - <em>present</em></p>
+			<p class="par_exp">
+			I am a lifelong learner. I believe it is never too late to start to learn something new in your life. Be brave and step out of your comfort zone!
+			</p>
+		</div>
+		<!-- End Experience Section -->
 
-    
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+		<!-- Optional JavaScript -->
+		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+		<script
+			src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
