--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
 			crossorigin="anonymous"
 		/>
 
-		<title>EDPS 6560 week2-3</title>
+		<title>EDPS 6560 Spring 2020 - Week 3</title>
 	</head>
 
 	<body>
-		<!-- Welcome to EDPS 6560 week2-3- 
-            This is an example comment 
+		<!-- Welcome to EDPS 6560 Week 2 - 
+            This is an example comment!
         -->
 		<div id="sec_lan">
-			<h1><strong>Qing Zhang</strong></h1>
-			<h2>IDET student at the University of Utah</h2>
+			<h1><strong>Eric Poitras</strong></h1>
+			<h2>Assistant Professor of Instructional Design and Educational Technology currently working at the University of Utah</h2>
 			<h3>UI Design | UX Testing | Web Development | Machine Learning | eLearning</h3>
 			<h4>
-				Creating advanced instructional systems and technologies that leverage data analytics to tailor instruction to the specific needs of different learners
+				Creating advanced instructional systems and technologies that leverage data analytics to tailor instruction to the specific needs of different
+				learners
 			</h4>
 			<a href="#sec_abo">About Me</a>
 		</div>
@@ -44,20 +45,24 @@
 		<div id="sec_abo">
 			<!-- Start About Me Section -->
 			<h1>About Me</h1>
-			<img src="img/bio.png" alt="Cynthia’s headshot" height="300" width="auto" />
+			<img src="img/bio.png" alt="Eric Poitras headshot" height="300" width="auto" />
 			<p>
-				Currently, I am a DLI Chinese Teacher. I love teaching Chinese to my US students!
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur.
 			</p>
 		</div>
 		<!-- End About Me Section -->
 		<div id="sec_exp">
 			<!-- Start Experience Section -->
 			<h1>Experience</h1>
-			<h2>Skills</h2>
-			<h3>IDET program, <br /><span>University of Utah</span></h3>
-			<p>August 2024 - <em>present</em></p>
+			<h2>Assistant Professor</h2>
+			<h3>Educational Psychology, <br /><span>University of Utah</span></h3>
+			<p>August 2014 - <em>present</em></p>
 			<p class="par_exp">
-			I am a lifelong learner. I believe it is never too late to start to learn something new in your life. Be brave and step out of your comfort zone!
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur.
 			</p>
 		</div>
 		<!-- End Experience Section -->
@@ -81,3 +86,6 @@
 		></script>
 	</body>
 </html>
+
+
+
