--- a/index.html
+++ b/index.html
@@ -13,21 +13,19 @@
 			crossorigin="anonymous"
 		/>
 
-		<title>EDPS 6560 week2-3</title>
+		<title>EDPS 6560 Spring 2025 Qing Zhang</title>
 	</head>
 
 	<body>
-		<!-- Welcome to EDPS 6560 week2-3- 
-            This is an example comment 
-        -->
+		<!-- Welcome to EDPS 6560 Week 2 - 
+                                 This is an example comment!-->
 		<div id="sec_lan">
-			<h1><strong>Qing Zhang</strong></h1>
-			<h2>IDET student at the University of Utah</h2>
+			<h1><strong>Cynthia Zhang</strong></h1>
+			<h2>A graduate student of Instructional Design and Educational Technology currently working at Weber School District of Utah</h2>
 			<h3>UI Design | UX Testing | Web Development | Machine Learning | eLearning</h3>
-			<h4>
-				Creating advanced instructional systems and technologies that leverage data analytics to tailor instruction to the specific needs of different learners
+			<h4>Creating advanced instructional systems and technologies that leverage data analytics to tailor instruction to the specific needs of different learners
 			</h4>
-			<a href="#sec_abo">About Me</a>
+			<a href="https://sites.google.com/d/1A1Fo84otACF0ou3Ui6ZZt8GDOn5gjRpp/p/1G5zZe4grXeyYtRn1kTZJu13SD2CbF49z/edit" title=”Cynthia’s Google Site”>About Me</a>
 		</div>
 		<nav id="sec_nav">
 			<ul>
@@ -35,8 +33,7 @@
 				<li>Experience</li>
 				<li>Education</li>
 				<li>Skills</li>
-				<li><a href="projects/1.html">Portfolio</a></li>
-				<li>Awards</li>
+				<li><a href="https://sites.google.com/d/1A1Fo84otACF0ou3Ui6ZZt8GDOn5gjRpp/p/1G5zZe4grXeyYtRn1kTZJu13SD2CbF49z/edit" title=“Cynthia’s Google Site”> Portfolio</a></li>
 				<li><a href="contact.html" target="_blank">Contact Me</a></li>
 				<li><a class="btn btn-primary rounded-pill" href="contact.html" role="button" target="_blank">Contact Me</a></li>
 			</ul>
@@ -46,18 +43,22 @@
 			<h1>About Me</h1>
 			<img src="img/bio.png" alt="Cynthia’s headshot" height="300" width="auto" />
 			<p>
-				Currently, I am a DLI Chinese Teacher. I love teaching Chinese to my US students!
+Currently, I am a DLI Chinese Teacher. I love teaching Chinese to my US students! <br>
+Meanwhile， I am a patient, detail-oriented, efficient, and creative instructional designer. <br>I enjoy designing meaningful and engaging learning experiences that meet the diverse needs of learners.
 			</p>
+<img src="img/Students.png" alt="US Students" height="400" width="auto" />
+
 		</div>
-		<!-- End About Me Section -->
+		<!-- End About Me Section →
+
 		<div id="sec_exp">
 			<!-- Start Experience Section -->
 			<h1>Experience</h1>
-			<h2>Skills</h2>
-			<h3>IDET program, <br /><span>University of Utah</span></h3>
+			<h2>Certificates</h2>
+			<h3>Educational Psychology, <br /><span>University of Utah</span></h3>
 			<p>August 2024 - <em>present</em></p>
 			<p class="par_exp">
-			I am a lifelong learner. I believe it is never too late to start to learn something new in your life. Be brave and step out of your comfort zone!
+			I am a passionate lover of life. I enjoy music and often play my favorite pop songs on the piano. Singing also brings me joy and helps me express myself. I believe that a love for life and a positive attitude fuel both personal growth and professional success.
 			</p>
 		</div>
 		<!-- End Experience Section -->
@@ -81,5 +82,4 @@
 		></script>
 	</body>
 </html>
-
 
