--- a/index.html
+++ b/index.html
@@ -14,9 +14,22 @@
 		/>
 
 		<title>EDPS 6560 Spring 2025 Qing Zhang</title>
+<style>
+        body {
+            background-image: url('img/background pic.jpg'); 
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            margin: 0;
+            padding: 0;
+            height: 100vh; /* 确保 body 高度占满整个屏幕 */
+        }
+    </style>
+
 	</head>
 
 	<body>
+
 		<!-- Welcome to EDPS 6560 Week 2 - 
                                  This is an example comment!-->
 		<div id="sec_lan">
@@ -82,4 +95,3 @@ Meanwhile， I am a patient, detail-oriented, efficient, and creative instructio
 		></script>
 	</body>
 </html>
-
