--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Meanwhile， I am a patient, detail-oriented, efficient, and creative instructio
 <img src="img/Students.png" alt="US Students" height="400" width="auto" />
 
 		</div>
-		<!-- End About Me Section →
+		<!-- End About Me Section -->
 
 		<div id="sec_exp">
 			<!-- Start Experience Section -->
