--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             background-position: center;
             margin: 0;
             padding: 0;
-            height: 100vh; /* 确保 body 高度占满整个屏幕 */
+            min-height: 100vh; /* 确保 body 高度占满整个屏幕 */
         }
     </style>
 
