--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<li>Experience</li>
 				<li>Education</li>
 				<li>Skills</li>
-				<li><a href="https://sites.google.com/d/1A1Fo84otACF0ou3Ui6ZZt8GDOn5gjRpp/p/1G5zZe4grXeyYtRn1kTZJu13SD2CbF49z/edit" title=“Cynthia’s Google Site”> Portfolio</a></li>
+				<li><a href="https://sites.google.com/d/1A1Fo84otACF0ou3Ui6ZZt8GDOn5gjRpp/p/1G5zZe4grXeyYtRn1kTZJu13SD2CbF49z/edit" title=“Cynthia’s Google Site”> Qing's Google Site</a></li>
 				<li><a href="contact.html" target="_blank">Contact Me</a></li>
 				<li><a class="btn btn-primary rounded-pill" href="contact.html" role="button" target="_blank">Contact Me</a></li>
 			</ul>
@@ -66,7 +66,7 @@ Meanwhile， I am a patient, detail-oriented, efficient, and creative instructio
 
 		<div id="sec_exp">
 			<!-- Start Experience Section -->
-			<h1>Experience</h1>
+			<h1><a href="https://drive.google.com/drive/folders/1ZpVLnR09uigT6srumPHWLbx-0ahPP-G9" title=“Qing's Experience”> Qing's Experience</a>Experience</h1>
 			<h2>Certificates</h2>
 			<h3>Educational Psychology, <br /><span>University of Utah</span></h3>
 			<p>August 2024 - <em>present</em></p>
