--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Meanwhile， I am a patient, detail-oriented, efficient, and creative instructio
 
 		<div id="sec_exp">
 			<!-- Start Experience Section -->
-			<h1><a href="https://drive.google.com/drive/folders/1ZpVLnR09uigT6srumPHWLbx-0ahPP-G9" title=“Qing's Experience”> Qing's Experience</a>Experience</h1>
+			<h1><a href="https://drive.google.com/drive/folders/1ZpVLnR09uigT6srumPHWLbx-0ahPP-G9" title=“Qing's Experience”> Qing's Experience</a></h1>
 			<h2>Certificates</h2>
 			<h3>Educational Psychology, <br /><span>University of Utah</span></h3>
 			<p>August 2024 - <em>present</em></p>
